# Quesa

./: .editorconfig  .gitignore  .hgignore  LICENSE  README.md
Development/Projects/Mac/: Quesa Custom Elements.mcp  Quesa Custom Elements.mcp.exp  Quesa Framework.mcp.xml  Quesa Gestalt.mcp  Quesa Stubs.mcp  Quesa Viewer.mcp  Quesa Viewer.mcp.exp  Quesa-framework-targets.xcconfig  Quesa-project-config.xcconfig  Quesa.mcp  Quesa.mcp.exp  Quesa.mcp.xml  QuesaCarbonDebug.pch  QuesaCarbonProfile.pch  QuesaCarbonRelease.pch  QuesaClassicDebug.pch  QuesaClassicProfile.pch  QuesaClassicRelease.pch  QuesaCocoa-project.xcconfig  QuesaMachoDebug.pch  QuesaMachoRelease.pch  QuesaStaticDebug.pch  QuesaStaticProfile.pch  QuesaStaticRelease.pch  quesa-export-gcc3.txt  quesa.cvs
Development/Projects/Mac/Quesa (Legacy).xcodeproj/: project.pbxproj
Development/Projects/Mac/Quesa.xcode/: project.pbxproj
Development/Projects/Mac/Quesa.xcodeproj/: project.pbxproj
Development/Projects/Mac/QuesaCocoa.xcodeproj/: project.pbxproj
Development/Projects/Unix/: AUTHORS  COPYING  ChangeLog  INSTALL  INSTALL.examples  INSTALL.fullDist  Makefile.am  Makefile.am.examples  NEWS  README  acinclude.m4  configure.in  configure.in.examples  makefile
Development/Projects/Unix/Scripts/: buildDistribution.sh  buildUnix.sh  destroyUnixTree.sh  prepareUnixTree.sh
Development/Projects/Windows/: NoOpenGL.props  Quesa-NoOpenGL.vcxproj  Quesa-NoOpenGL.vcxproj.filters  Quesa.dsp  Quesa.dsw  Quesa.mcp  Quesa.mcp.xml  Quesa.sln  Quesa.vcproj  Quesa.vcxproj  Quesa.vcxproj.filters  QuesaHeaders.h  QuesaHeadersDebug.h  QuesaViewer.dsp  QuesaViewer.dsw  visual studio common.props
Development/Scripts/: Scripts.html
Development/Scripts/BuildRelease/: BuildRelease.pl  WinBuild.bat
Development/Scripts/HeaderDoc/: DoQuesaDocs.pl  MakeDocs.app  MasterTOC-footer-template.html  MasterTOC-header-template.html  PrepareForHeaderDoc.pl  gatherHeaderDoc.pl  headerDoc2HTML.config  headerDoc2HTML.pl
Development/Scripts/Headeriser/: Headeriser.pl
Development/Scripts/Skeleton/: Skeleton.pl
Development/Scripts/Status/: Status.pl  status.txt
Development/Source/FileFormats/: E3IOFileFormat.c  E3IOFileFormat.cpp  E3IOFileFormat.h
Development/Source/StackCrawl/: About-StackWalker.txt  E3StackCrawl.c  E3StackCrawl.h  HeapManager License.text  StackWalker.c  StackWalker.h
Documentation/: index.html  site-styles.css
Documentation/developer/: bugs.html  cvs.html  todo.html
Documentation/developer/apiref/: MasterTOC.html
Documentation/developer/book/: index.html
Documentation/developer/files/: Quesa.cvs.sit
Documentation/info/: download.html  list.html  list_archive.html  screenshots.html  status.html
Documentation/info/files/: quesa.cvs.sit
Documentation/other/: contributors.html  links.html  logo.html
Documentation/other/files/: quesa.3dmf
Documentation/reference/: build.html  carbon.html  docs.html  lgpl.html  licence.html
SDK/Examples/Background Test/: Background Test  Background Test.c  Background Test.mcp  BackgroundTest.xcconfig  BackgroundTest_Prefix.pch  Info.plist
SDK/Examples/Camera Test/: Camera Test  Camera Test.c  Camera Test.dsp  Camera Test.mcp  makefile
SDK/Examples/Dump Group/: Dump Group.c  Dump Group.dsp  Dump Group.mcp  makefile
SDK/Examples/FilamentViewer/: BakeMaterialRule.sh  README.md  proj.xcconfig  targ_Metal.xcconfig  targ_OpenGL.xcconfig
SDK/Examples/Geom Test/: Geom Test  Geom Test.c  Geom Test.cpp  Geom Test.dsp  Geom Test.mcp  Geom Test.mcp.xml  Geom Test.sln  Geom Test.vcproj  Geom Test.vcxproj  Geom Test.vcxproj.filters  Geom Test_Prefix.pch  GeomTest-VS.props  GeomTest.icns  GeomTest.xcconfig  Info.plist  XCode-Info.plist  makefile
SDK/Examples/HIQuesaView/: HIQuesaView.cpp  HIQuesaView.h  HIQuesaViewProj.xcconfig  HIQuesaViewTarget.xcconfig  HIQuesaView_Prefix.pch  Info.plist  MainWindow.cpp  MainWindow.h  MakeTabsSwitchPanels.cpp  MakeTabsSwitchPanels.h  READ ME.txt  main.cp
SDK/Examples/Import Test/: Import Test  Import Test.c  Import Test.dsp  Import Test.mcp  makefile
SDK/Examples/Light Test/: Light Test  Light Test.c  Light Test.mcp  Light test.dsp  makefile
SDK/Examples/Qut/: Qut.c  Qut.cpp  Qut.h  QutInternal.h  QutTexture.c  QutTexture.cpp  QutTexture.h
SDK/Examples/Shader Test/: Shader Test  Shader Test.c  Shader Test.dsp  Shader Test.mcp
SDK/Examples/StereoDemo/: DemoController.h  DemoController.mm  DemoGeometry.h  DemoGeometry.m  Info-Quesa3DView.plist  Quesa3DView.h  Quesa3DView.m  QuesaCocoaUtil.m  main.m  project.xcconfig
SDK/Examples/Viewer Test/: Viewer Test.c  Viewer Test.mcp
SDK/Extras/3DS-FileSupport/: COPYING
SDK/Extras/3dsReader/: 3dsReader.c  3dsReader.h  3dsReader.mcp  3dsReader.mcp.exp  3dsreader.dsp  3dsreader.sln  3dsreader.vcproj
SDK/Extras/Binify3DMF/: Binify-proj.xcconfig  Readme.txt
SDK/Extras/Math Test/: Math Test.cp  Math Test.mcp  QD3D_1.6.txt
SDK/Extras/OBJ.Reader/: OBJ.Reader.c  OBJ.Reader.h  OBJ.Reader.mcp  OBJ.Reader.mcp.exp  WavefrontOBJ.c  wavefrontobj.h
SDK/Extras/Quesa Model Viewer/: Carbon Resources.r  Info.plist  Quesa Model Viewer.mcp  icons-3DMF.r  icons-3DMF.rsrc  icons-APPL.r  icons-APPL.rsrc  main program.cpp  project resources.rsrc  project-resources.r
SDK/Extras/Rayshade/: Devdoc.html  Rayshade.html
SDK/Extras/SampleImporter/: E3FFormat_Sample.c  E3FFormat_Sample.h  SampleImporter.dsp  SampleImporter.mcp  SampleImporter.mcp.exp
SDK/Extras/Textify3DMF/: ReadMe.txt  Textify-proj.xcconfig  main.cpp  prefix.h
SDK/Extras/VRML Reader/: read-me.html
SDK/Includes/: Includes.html
SDK/Includes/Quesa/: CQ3GroupRange.h  CQ3ObjectRef.h  CQ3ObjectRef_Gets.h  CQ3WeakObjectRef.h  Q3GroupIterator.h  Quesa.h  QuesaCamera.h  QuesaController.h  QuesaCustomElements.h  QuesaDrawContext.h  QuesaErrors.h  QuesaExtension.h  QuesaGeometry.h  QuesaGroup.h  QuesaIO.h  QuesaLight.h  QuesaMath.h  QuesaMathOperators.hpp  QuesaMemory.h  QuesaPick.h  QuesaRenderer.h  QuesaSet.h  QuesaShader.h  QuesaStorage.h  QuesaString.h  QuesaStyle.h  QuesaTransform.h  QuesaView.h  QuesaViewer.h
(+1948 files in other folders)
