dnl Process this file with autoconf to produce a configure script.
AC_INIT(Quesa,1.7,quesa_list@designcommunity.com)

AC_CONFIG_SRCDIR(Source/Core/Glue/QD3DCamera.c)
AM_INIT_AUTOMAKE([no-dependencies])
AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL

AC_C_BIGENDIAN_QUESA



dnl Checks for X.
AC_PATH_X
if test $have_x != yes; then
	AC_MSG_ERROR([Fatal - can't find X - Stopping here.])
fi

AC_HAVE_OPENGL_QUESA

if test $have_GL != yes; then
	AC_MSG_ERROR([Fatal - can't find OpenGL Libraries - Stopping here.])
else
if test $have_GLU != yes; then
	AC_MSG_ERROR([Fatal - can't find GLU Libraries - Stopping here.])
else
	LDFLAGS="${GL_LIBS} $LDFLAGS"
	CPPFLAGS="${GL_CFLAGS} $CPPFLAGS"
fi

fi


AC_OUTPUT(Makefile)
